[tool.poetry]
name = "cnos-connector"
version = "0.1.8"
description = "CnosDB Python Client"
authors = ["Subsegment <304741833@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cnosdb_connector"}]

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
