[tool.poetry]
name = "cnos-connector"
version = "0.1.9"
description = "CnosDB Python Client"
authors = ["Subsegment <304741833@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cnosdb_connector"}]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.plugins."sqlalchemy.dialects"]
"cnosdb" = "cnosdb_connector.sqlalchemy:CnosDBDialect"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
